force-app/main/default/objects/Forecast_Channel__c/Forecast_Channel__c.object-meta.xml
<CustomObject>
    <description>Object to track Ubiquity&apos;s forecast channels and their makeup.</description>
    <label>Forecast Channel</label>
    <nameField>
        <label>Forecast Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>