force-app/main/default/objects/Forecast_Channel__c/fields/Channel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Channel_Notes__c</fullName>
    <description>Notes on channel</description>
    <inlineHelpText>Notes on channel</inlineHelpText>
    <label>Channel Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>