force-app/main/default/objects/Forecast_Channel__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Channel and definition.</description>
    <inlineHelpText>Description of Channel and definition.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>