force-app/main/default/objects/Forecast_Channel__c/fields/Partner_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Source__c</fullName>
    <description>True if Lead Source Includes Partner Referral</description>
    <formula>INCLUDES(  Lead_Source__c, &quot;Partner Referral&quot;)</formula>
    <inlineHelpText>True if Lead Source Includes Partner Referral</inlineHelpText>
    <label>Partner Referral Source</label>
    <type>Checkbox</type>
</CustomField>