force-app/main/default/objects/Forecast_Channel__c/fields/Rules__c.field-meta.xml
<CustomField>
    <fullName>Rules__c</fullName>
    <description>Are there any rules to note for this Channel?</description>
    <inlineHelpText>Are there any rules to note for this Channel?</inlineHelpText>
    <label>Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>