force-app/main/default/objects/Forecast_Channel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Source_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>